[gd_scene load_steps=2 format=3 uid="uid://cot1861golrnt"]

[ext_resource type="Script" path="res://UI.gd" id="1_ba2kq"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ba2kq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Health: 100"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ScoreLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Score: 0"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 2

[node name="AmmoDisplay" type="Label" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 2

[node name="WeaponName" type="Label" parent="Control/MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="VBoxWaveInfo" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxWaveInfo"]
layout_mode = 2
alignment = 1

[node name="WaveInfoLabel" type="Label" parent="Control/MarginContainer/VBoxWaveInfo/HBoxContainer"]
layout_mode = 2
